--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
 
-<body>Hello</body>
+<body>
+    <table>
+        <thead>
+            <tr>
+                <th>Project</th>
+                <th>Client</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Michu</td>
+                <td>Qena</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
 
 </html>
