fix: remove table

--- a/index.html
+++ b/index.html
@@ -2,20 +2,7 @@
 <html>
 
 <body>
-    <table>
-        <thead>
-            <tr>
-                <th>Project</th>
-                <th>Client</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Michu</td>
-                <td>Qena</td>
-            </tr>
-        </tbody>
-    </table>
+    Hello
 </body>
 
 </html>
